Address Bidwave adapter review comments